test/integration/cli-args/sstanc.t/fail/04_protected_data_never_observed.stan
// Compile with: stanc --sstanc --sstan-protect=y
data {
  real y;
}
parameters {
  real mu;
}
model {
  mu ~ normal(0, 1);
}
